--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <title>My First Node Project</title>
+    <title>CI/CD Node Project With Jenkins</title>
 </head>
 <body>
-    <h1>Hello from my first Node.js project!</h1>
-    <p>It's working!</p>
+    <p>Welcome to The Matrix...</p>
 </body>
 </html>
